update: 脱敏